--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Carosello</title>
 </head>
 <body>
+    <div class="cont">
+        <div class="slider">
+            <div class="up"><i class="fa-solid fa-circle-chevron-up"></i></div>
+            <div class="down"><i class="fa-solid fa-circle-chevron-down"></i></div>
+        </div>
+    </div>
     <script src="js/index.js"></script>
 </body>
 </html>
